; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/acpica/extr_acpi_ec.c_acpi_ec_shutdown.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/acpica/extr_acpi_ec.c_acpi_ec_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_ec_softc = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @acpi_ec_shutdown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @acpi_ec_shutdown(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.acpi_ec_softc*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.acpi_ec_softc* @device_get_softc(i32 %4)
  store %struct.acpi_ec_softc* %5, %struct.acpi_ec_softc** %3, align 8
  %6 = load %struct.acpi_ec_softc*, %struct.acpi_ec_softc** %3, align 8
  %7 = getelementptr inbounds %struct.acpi_ec_softc, %struct.acpi_ec_softc* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.acpi_ec_softc*, %struct.acpi_ec_softc** %3, align 8
  %10 = getelementptr inbounds %struct.acpi_ec_softc, %struct.acpi_ec_softc* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @AcpiDisableGpe(i32 %8, i32 %11)
  ret i32 0
}

declare dso_local %struct.acpi_ec_softc* @device_get_softc(i32) #1

declare dso_local i32 @AcpiDisableGpe(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
